# django-boilerplate

./: .gitignore  Pipfile  pyproject.toml
myapp/: context_processors.py  urls.py  views.py
myapp/templates/: base.html  home.html  info.html  signin.html
myapp/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
myapp/templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt  password_reset_key_message.txt  password_reset_key_subject.txt
myapp/templates/account/messages/: cannot_delete_primary_email.txt  email_confirmation_sent.txt  email_confirmed.txt  email_deleted.txt  logged_in.txt  logged_out.txt  password_changed.txt  password_set.txt  primary_email_set.txt  unverified_primary_email.txt
myapp/templates/account/snippets/: already_logged.html  already_logged_in.html  form_errors.html
mysite/: settings.py  urls.py
staticfiles/: staticfiles.json
