[tool.poetry]
name = "django-boilerplate"
version = "0.1.0"
description = "A simplified boiler plate for Django webapps"
authors = ["AndreGuerra123 <guerraandre@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.1"
gunicorn = "^19.9"
django-heroku = "^0.3.1"
django-allauth = "^0.39.1"
django-bootstrap4 = "^0.0.7"
envision = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
